hphp/test/zend/good/ext/pcre/tests/preg_replace_error1.php.expectf
*** Testing preg_replace() : error conditions***

Arg value is abcdef

Warning: Delimiter must not be alphanumeric or backslash in %s/preg_replace_error1.php on line 21
NULL

Arg value is /[a-zA-Z]

Warning: No ending delimiter '/' found: [/[a-zA-Z]] in %s/preg_replace_error1.php on line 21
NULL

Arg value is [a-zA-Z]/

Warning: Unknown modifier '/': [[a-zA-Z]/] in %s/preg_replace_error1.php on line 21
NULL

Arg value is /[a-zA-Z]/F

Warning: Unknown modifier 'F': [/[a-zA-Z]/F] in %s/preg_replace_error1.php on line 21
NULL

Arg value is Array
string(1) "a"

Arg value is /[a-zA-Z]/
string(1) "1"

Catchable fatal error: Object of class stdClass could not be converted to string in %s/preg_replace_error1.php on line 24
